smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-unclosed-parameters2.smithy
// Parse error at line 4, column 1 near `[EOF]`: Expected a valid identifier character, but found '[EOF]'
namespace com.foo
map MyMap { key: SomeShape,
